일부 오류들 수정